<resources>
    <string name="app_name">List in Time</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_series">Series</string>
    <string name="menu_games">Games</string>
    <string name="menu_books">Books</string>
    <string name="menu_media">Media</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="edit_button">Edit Button</string>
    <string name="delete_button">Delete Button</string>
    <string name="image_of_media">Image of Media</string>
    <string name="sort">Sort</string>

    <string-array name="rating_spinner">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>