<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_baseline_home_24"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_movies"
                android:icon="@drawable/ic_baseline_local_movies_24"
                android:title="@string/menu_movies"/>
        <item
                android:id="@+id/nav_series"
                android:icon="@drawable/ic_baseline_live_tv_24"
                android:title="@string/menu_series"/>
        <item
                android:id="@+id/nav_books"
                android:icon="@drawable/ic_baseline_menu_book_24"
                android:title="@string/menu_books"/>
        <item
                android:id="@+id/nav_games"
                android:icon="@drawable/ic_baseline_videogame_asset_24"
                android:title="@string/menu_games"/>
    </group>
</menu>